[project]
name = "tracker"
version = "0.3.0"
description = ""
authors = [
    {name = "Gabriel de Oliveira Chaves", email = "gabriel.chaves@maistodos.com.br"},
    {name = "Johnathan Barbosa de Araujo", email = "johnathan.araujo@maistodos.com.br"}
]
readme = "README.md"
requires-python = ">=3.8,<4.0"
dependencies = []

[poetry.optional-dependencies]
sentry = ["sentry-sdk (>=1.20.0,<3.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
pytest = "^8.4.1"
black = "^25.1.0"
isort = "^6.0.1"
coverage = "^7.10.6"
mutmut = "^3.3.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[tool.coverage.run]
omit = [
    "tests/*",
]

[tool.mutmut]
paths_to_mutate = ["tracker/"]
tests_dir = ["tests/"]
